# garbage-collection

./: .gitignore  CMakeLists.txt  GCPointer.hpp  README.md  reference_counting.cpp  reference_counting.h
src/: CMakeLists.txt  gcpointer_example.cpp
src/gcpointer/: CMakeLists.txt  GCPointer.hpp  reference_counting.cpp  reference_counting.h
src/reference-counting/: CMakeLists.txt  GCPointer.hpp  reference_counting.cpp  reference_counting.h
